fixed spacing on design page and removed slideshow

--- a/app/assets/stylesheets/designs.css.scss
+++ b/app/assets/stylesheets/designs.css.scss
@@ -1,4 +1,6 @@
 .design-row{
+  margin-left: 0px !important;
+  margin-right: 0px !important;
   margin-top: 30px;
   margin-bottom: 30px
 }
